Enlazando css y js a index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <input type="text" name="" class="txt" id="txt1">
@@ -15,4 +16,5 @@
     <input type="button" value="multiplicar" class="btn" id="btnMul">
     <input type="button" value="dividir" class="btn" id="btnDiv">
 </body>
+    <script src="script.js"></script>
 </html>
