--- a/index.html
+++ b/index.html
@@ -15,4 +15,5 @@
     <input type="button" value="multiplicar" class="btn" id="btnMul">
     <input type="button" value="dividir" class="btn" id="btnDiv">
 </body>
+<script src="script.js"></script>
 </html>
